<resources>
    <!--TEXTOS GENERICOS COMPARTIDOS-->
    <string name="app_name">MoveYourSchool</string>
    <string name="TODO">TODO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">¿No tienes Nombre aún?</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="TXT_DEBE_RELLENAR_CORRECTAMENTE">Debe rellenar todos los campos correctamente</string>
    <string name="TXT_NO_SE_HA_PODIDO_REGISTRAR">No se ha podido registrar el usuario</string>

    <!--ACTIVIDADES-->
    <string name="BTN_CANCEL">CANCELAR</string>
    <string name="TXT_ELEGIR_FILTRO">Elegir Filtro</string>

    <!--LOGIN-->
    <string name="STRING_FILL">%1$s</string>
    <string name="HINT_USUARIO">Usuario</string>

    <!--SPLASH SCREEN-->
    <string name="TXT_SIGN_UP">Sign Up</string>
    <string name="BTN_COMENZAR">Comenzar</string>
    <string name="TXT_ERROR_GENERICO">Ha ocurrido un error al realizar la operación. Vuelva a intentarlo y sino póngase en contacto con el administrador de la aplicación.</string>
    <string name="TXT_ERROR_PASSWORD_DIFERENTE">Error, las contraseñas que introduzca han de ser idénticas.</string>
    <string name="TXT_ERROR_EMAIL">La dirección de correo que ha consignado no tiene formato adecuado.</string>

    <!--TEXTOS SIGN UP STEP 1-->
    <string name="TXT_ACTIVIDAD_ARTISTICA">Actividad Artística</string>
    <string name="TXT_VISITA_CIUDAD">Visita Ciudad</string>
    <string name="TXT_ACTIVIDAD_DEPORTIVA">Actividad Deportiva</string>
    <string name="TXT_VISITA_FABRICA">Visita Fábrica</string>
    <string name="TXT_FIESTA_POPULAR">Fiesta Popular</string>
    <string name="TXT_ACTIVIDAD_RELIGIOSA">Actividad Religiosa</string>
    <string name="TXT_JUEGO_EDUCATIVO">Juego Educativo</string>
    <string name="TXT_VISITA_MONUMENTAL">Visita Monumental</string>
    <string name="TXT_VISITA_MUSEO">Visita Museo</string>
    <string name="TXT_ACTIVIDAD_MUSICAL">Actividad Musical</string>
    <string name="TXT_ACTIVIDAD_NATURALEZA">Actividad Naturaleza</string>
    <string name="TXT_ACTIVIDAD_TECNOLOGÍA">Actividad Tecnológica</string>
    <string name="TXT_TALLER_EDUCATIVO">Taller Educativo</string>
    <string name="TXT_VISITA_TEATRO">Teatro</string>
    <string name="TXT_OTRAS_ACTIVIDADES">Otras Actividades</string>

    <!--TEXTOS SIGN UP STEP 2-->
    <string name="TXT_ELIGE_OPCION">Elige una opcion</string>
    <string name="TXT_EMPRESA_ACTIVIDADES">Ofrezco Actividades Culturales</string>
    <string name="TXT_INSTITUCION_EDUCATIVA">Soy una Institución Educativa</string>
    <string name="TXT_PASO_1_2">Paso 1/2</string>
    <string name="TXT_YA_CASI_ESTA">¡Ya casi está!</string>
    <string name="BTN_REGISTRAR">Registrar</string>
    <string name="ESCOGER_IMAGEN">Escoja una imagen</string>

    <!--ACTIVITY FORM SUCCESS-->
    <string name="ACTIVITY_FORM_SUCCESS">Se ha dado de alta la actividad con éxito.</string>

    <!--TEXTOS USER DETAIL-->
    <string name="TXT_ENVIAR_MENSAJE">Enviar Mensaje</string>
    <string name="TXT_DESC">El Museo Nacional del Prado, desde que fue inaugurado en 1819 y a lo largo de su historia centenaria, ha cumplido con la alta misión de conservar, exponer y enriquecer el conjunto de las colecciones y obras de arte que, estrechamente vinculadas a la historia de España, constituyen una de las más elevadas manifestaciones de expresión artística de reconocido valor universal.</string>
    <string name="VAL_ELIJA_LOCALIDAD">Localidad</string>

    <!--MIS CHATS-->
    <string name="CHAT_ELIMINADO">Se ha eliminado la conversación satisfactoriamente.</string>

    <!--TEXTOS SIGN UP SUCCESS-->
    <string name="TXT_BIENVENIDO">Bienvenido</string>
    <string name="TXT_CORREO_CONFIRMACION">Te enviaremos un correo a <b>%1$s</b> confirmando el alta de tu cuenta.</string>

    <string name="usuarios">Usuarios</string>

    <!--MENUS-->
    <string name="MENU_MI_PERFIL">Mi Perfil</string>

    <!--FORM REGISTRO ACTIVIDADES-->
    <string name="VAL_NEXT">Siguiente</string>

    <!--CLAVES-->
    <string name="KEY_TYPE">KEY_TYPE</string>
    <string name="KEY_MAIL">KEY_MAIL</string>
    <string name="KEY_USER">KEY_USER</string>
    <string name="KEY_USER_ORIGEN">KEY_USER ORIGEN</string>
    <string name="KEY_USER_DESTINO">KEY_USER DESTINO</string>
    <string name="KEY_FILTER">KEY_FILTER</string>
    <string name="HINT_REPETIR_PASS">Repetir Password</string>
    <string name="TXT_SIGN_IN">SIGN IN</string>
    <string name="KEY_ACTIVIDAD">KEY_ACTIVIDAD</string>
    <string name="KEY_SELECTED_FRAGMENT">SELECTED_FRAGMENT</string>
    <string name="KEY_RESERVA_INFO">KEY_RESERVA_INFO</string>
    <string name="KEY_USER_ACTIVIDADES">KEY_USER_ACTIVIDADES</string>
    <string name="KEY_MOD_ACTIVITY">MOD_ACTIVITY</string>

    <!--MODIFICAR ACTIVIDAD-->
    <string name="VAL_MODIF_ACTIVIDAD">Se ha modificado la actividad con éxito.</string>
    <string name="CAMERA_ERROR">%1$s</string>
    <string name="VAL_TEXT_LOCKED">Puede bloquear sus actividades para que los usuarios no puedan realizar más reservas sobre ella. Al realizar esta operación la actividad dejará de visualizarse pero recuerde que las reservas comprometidas siguen manteniéndose.</string>
    <string name="VAL_TEXT_UNLOCKED">Puede desbloquear la actividad para que los usuarios tengan acceso a realizar reservas y visualizarla en el menú general de actividades.</string>

    <!--AUTH EXCEPTIONS-->
    <string name="EXCEPT_USER_INEXISTENT">com.google.firebase.auth.FirebaseAuthInvalidUserException: There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="EXCEPT_INVALIDA_PASSWORD">com.google.firebase.auth.FirebaseAuthInvalidCredentialsException: The password is invalid or the user does not have a password.</string>
    <string name="EXCEPT_SERVER_TIMEOUT">com.google.firebase.FirebaseNetworkException: A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>
    <string name="VAL_USER_INEXISTENT">No se ha encontrado usuario con la dirección proporcionada</string>
    <string name="VAL_INVALID_PASSWORD">La contraseña introducida es inválida</string>
    <string name="VAL_SERVER_TIMEOUT">El Sevidor no ha respondido o no hay conexión a la red.</string>
    <string name="VAL_INVALID_PASSWORD_STRENGTH">La contraseña debe tener al menos 6 caracteres</string>
    <string name="VAL_ACCOUNT_ALREADY_EXISTS">La cuenta de correo es inválida. Ya se encuentra registrada en el sistema.</string>
    <string name="EXCEPT_UNKNOWN_ERROR">Ha ocurrido un error desconocido. Reinicie el proceso.</string>
    <string name="EXCEPT_RELLENAR_TODOS_CAMPOS">Debe rellenar todos los campos</string>
    <string name="EXCEPT_DEBE_RELLENAR_TITULO_DESCRIPCION_PRECIO">Debe rellenar al menos el Título, la Descripción y el Precio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="USUARIO_CADUCADO">Su sesión ha caducado o ha hecho Log Out. El proceso debe reiniciarse.</string>
    <string name="USUARIO_SIN_DATOS">El usuario no dispone de direcciones configuradas en su perfil.</string>
    <string name="EXCEPT_CAMPOS_NUMERICOS">El precio y el número de personas han de ser números.</string>
    <string name="EXCEPT_DURACION">La duración de la actividad debe ser mayor a 0 horas.</string>
    <string name="EXCEPT__CODPOSTAL_CAMPO_NUMERICO">Debe facilitar un codigo postal númerico</string>
    <string name="enhorabuena">¡Enhorabuena!</string>
    <string name="la_actividad_se_ha_dado_de_alta_con_xito_puede_ver_su_informaci_n_en_mis_actividades">La actividad se ha dado de alta con éxito. Puede ver su información en Mis Actividades.</string>
    <string name="numero_de_personas">Numero de Personas</string>
    <string name="precio_por_persona">Precio por persona</string>
    <string name="eliga_la_actividad">Eliga la actividad:</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="enviar_presupuesto">Enviar Presupuesto</string>
    <string name="error_vacio">No deje ningun campo en blanco</string>
    <string name="reserva_subida">Presupuesto enviado correctamente</string>
    <string name="tab_filtrar">Filtrar</string>
    <string name="tab_ordenar">Ordenar</string>
    <string name="dialog_opcion">Seleccione una opcion</string>
    <string name="dialog_cancelar">Cancelar</string>
    <string name="precio_final">Precio final</string>
    <string name="aceptar_presupuesto">Aceptar presupuesto</string>
    <string name="rechazar_presupuesto">Rechazar presupuesto</string>
    <string name="titulo">Titulo</string>
    <string name="reserva_aceptada">Presupuesto aceptado correctamente</string>
    <string name="reserva_rechazada">Presupuesto rechazado correctamente</string>
    <string name="cliente">Cliente</string>
</resources>
