<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    android:weightSum="10"
    tools:context=".activities.Reserva_info_empresa">

    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imgResInfoEmpresa"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:scaleType="center"
        android:src="@drawable/imgexample"
        app:riv_border_color="#333333"
        app:riv_corner_radius="20dip"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="repeat" />

    <TextView
        android:id="@+id/txtTituloResInfoEmpresa"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_margin="@dimen/PADDING_10"
        android:layout_weight="2"
        android:fontFamily="@font/bambino_light"
        android:text="TextView"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_weight="2"
        android:hint="@string/cliente">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/infoClienteEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_icon_people"
            android:fontFamily="@font/bambino_light"
            android:hint="@string/cliente" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/PADDING_10">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fecha"
            android:paddingRight="@dimen/PADDING_10">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fechaInforReservaEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="20dp"
                android:fontFamily="@font/bambino_light"
                android:hint="@string/fecha"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hora"
            android:paddingLeft="@dimen/PADDING_10">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/horaInforReservaEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_wall_clock"
                android:drawablePadding="20dp"
                android:fontFamily="@font/bambino_light"
                android:hint="@string/hora"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:hint="@string/precio_final">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/precioFinalInforReservaEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_euro"
            android:fontFamily="@font/bambino_light"
            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txtInfoEstadoEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:drawableStart="@drawable/ic_aceptado"
        android:fontFamily="@font/bambino_light"
        android:text="TextView"
        android:textSize="24sp" />

</LinearLayout>