<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin"
    android:weightSum="10"
    tools:context=".activities.activity_reserva_info">


    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imgResInfo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:scaleType="centerCrop"
        android:src="@drawable/imgexample"
        app:riv_border_color="#333333"
        app:riv_corner_radius="20dip"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="repeat" />


    <TextView
        android:id="@+id/txtTituloResInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/PADDING_10"
        android:layout_weight="2"
        android:fontFamily="@font/bambino_light"
        android:text="TextView"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/PADDING_10">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fecha"
            android:paddingRight="@dimen/PADDING_10">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fechaInforReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_calendar"
                android:drawablePadding="20dp"
                android:fontFamily="@font/bambino_light"
                android:hint="@string/fecha"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hora"
            android:paddingLeft="@dimen/PADDING_10">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/horaInforReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_wall_clock"
                android:drawablePadding="20dp"
                android:fontFamily="@font/bambino_light"
                android:hint="@string/hora"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:hint="@string/precio_final">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/precioFinalInforReserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_euro"
            android:fontFamily="@font/bambino_light"
            android:textColor="@color/colorPrimaryDark" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/containerSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/containerAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageAceptarReserva"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:onClick="aceptarPres"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                app:srcCompat="@drawable/ic_comprobado" />

            <TextView
                android:id="@+id/tvAceptaReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bambino_light"
                android:text="Aceptar"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerReject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageRechazarReserva"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:onClick="rechazarPres"
                app:srcCompat="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/tvRechazarReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bambino_light"
                android:text="Rechazar"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>